--- a/shared.css
+++ b/shared.css
@@ -54,9 +54,11 @@
 
 body {
     font-family: 'Nuckle', 'Inter', sans-serif;
+    font-style: medium;
     background-color: var(--nero);
     color: var(--heavy-metal);
     line-height: 1.5;
+    letter-spacing: 0%;
 }
 
 /* Typography */
@@ -130,7 +132,7 @@ a:hover {
 }
 
 img {
-    max-width: 100%;
+   
     height: auto;
     display: block;
 }
